--- a/index.html
+++ b/index.html
@@ -27,11 +27,27 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
+  <script>
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyCEG2eXAZWAwaSfV9-s3wlTQtHirRcyOYA",
+    authDomain: "portfolio-c4a12.firebaseapp.com",
+    projectId: "portfolio-c4a12",
+    storageBucket: "portfolio-c4a12.appspot.com",
+    messagingSenderId: "344619207631",
+    appId: "1:344619207631:web:2e6b590dd9e3eca4ede0ba"
+  };
+
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '1474911731';
+    var serviceWorkerVersion = '257917870';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
